Added fixes